# autonomous_racecar_software

./: .rosinstall  CMakeLists.txt  package.xml  pure_pursuit_planner.xml
config/: base_local_planner.yaml  common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml  odom_filter.yaml
documents/arduino/Razor_AHRS/: Razor_AHRS.ino
documents/arduino/auto_racecar_uno/: auto_racecar_uno.ino
documents/udev/: 60-auto-racecar.rules
include/auto_racecar/: pure_pursuit_planner.h
launch/: bag_mapping.launch  bag_record.launch  racecar_mapping.launch  racecar_navigation.launch
launch/includes/: controller.launch  gazebo.launch  imu.launch  laser_odom.launch  lidar.launch  localization.launch  map_server.launch  mapping.launch  motor.launch  navigation.launch  odom_filter.launch  rviz.launch  state_publisher.launch
launch/simulation/: gazebo_mapping.launch  gazebo_navigation.launch  gazebo_teleop.launch
launch/tests/: test_mapping.launch  test_teleop.launch
maps/: racecar_corridor.pgm  racecar_corridor.yaml  racecar_room.pgm  racecar_room.yaml  racecar_virtual_room.pgm  racecar_virtual_room.yaml
meshes/: lidar.stl  wheel.stl
params/: controller.yaml  imu.yaml  odom_filter.yaml
rviz/: default.rviz  mapping.rviz  navigation.rviz  teleop.rviz
scripts/: auto_racecar_teleop.py  gazebo_command.py  racecar_command.py  racecar_teleop.py
src/: pure_pursuit_planner.cpp
urdf/: macros.urdf.xacro  materials.urdf.xacro  racecar.gazebo  racecar.urdf.xacro
urdf/meshes/: imu.stl
urdf/urdf/: macros.urdf.xacro  racecar.gazebo  racecar.urdf.xacro
worlds/: racecar_corridor.world  racecar_virtual_room.world
worlds/corridor/: model.sdf
worlds/virtual_room/: model.config  model.sdf
